# telegram_bot

./: maim.py  pyproject.toml
app/: __init__.py
app/data/: __init__.py  films.json  handler.py
app/fsm/: __init__.py  film.py
app/keyboards/: __init__.py  films.py
app/routers/: __init__.py  __init___.py  films.py
